[package]
name = "tok-pro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbo = { version = "*", package = "turbo-genesis-sdk", features = ["solana"]}
solana-sdk = "1.9.1"

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
cc = { git = "https://github.com/jozanza/cc-rs.git", branch = "wasm-patch" }