[package]
name = "tok-pro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbo = { version = "1.1.2", package = "turbo-genesis-sdk", features = ["solana"]}

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
jobserver = { git = "https://github.com/jozanza/jobserver-rs.git", branch = "main" }
cc = { git = "https://github.com/jozanza/cc-rs.git", branch = "1.0.94" }